readability fixes (#20)
* font/padding changes

* load full retweet text

--- a/react-app/src/TweetPanel.css
+++ b/react-app/src/TweetPanel.css
@@ -1,16 +1,14 @@
 .tweet-panel {
   width: 100%;
-  padding: 5px;
   background-color: var(--tweet-bg-color);
-  border-radius: 5px;
-  margin-right: 5px;
 }
 
 .tweet-panel-header {
   background-color: var(--app-color);
   padding: 5px 10px;
   color: var(--app-bg-color);
-  border-radius: 5px;
+  border-radius: 50px;
+  margin: 10px 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -38,7 +36,7 @@
   color: var(--app-color);
   padding: 10px 20px;
   border: 2px solid var(--app-color);
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 .tweet-panel-tweet-similarity {
   font-size: 0.75em;
